[tool.poetry]
name = "sales-transformer"
version = "0.1.0"
description = ""
authors = ["turingnixstyx <naman.mishra194@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--cov=proj_demo",
    "--cov-report=html",
    "--cov-report=term-missing",
]
